--- a/app/eventdetails.html
+++ b/app/eventdetails.html
@@ -16,6 +16,7 @@
         </ul>
     </div>
 </div>
+    <div class="row">{{'hello'+' catty'}}</div>
     <div ng-controller="EventsController">
         <img ng-src="{{event.imgUrl}}" alt="{{event.name}}" class="col-lg-1"/>
         <div class="row">
