--- a/app/eventdetails.html
+++ b/app/eventdetails.html
@@ -5,14 +5,15 @@
     <title>Event Registrations</title>
     <link rel="stylesheet" href="css/app.css"/>
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css"/>
-    <link rel="stylesheet" href="css/cyborg_bs.min.css"/>
+    <!--<link rel="stylesheet" href="css/cyborg_bs.min.css"/>-->
 </head>
 <body ng-cloak>
 <div class="container">
 <div class="navbar">
     <div class="navbar-inner">
         <ul class="nav">
-            <li>Tikka</li>
+            <li><a href="eventdetails.html">Home</a></li>
+            <li><a href="newevent.html">Create</a></li>
         </ul>
     </div>
 </div>
@@ -21,7 +22,7 @@
         <img ng-src="{{event.imgUrl}}" alt="{{event.name}}" class="col-lg-1"/>
         <div class="row">
             <div class="col-lg-3">
-                <h2 ng-style="myStyle" ng-bind-template="{{event.name}} {{event.date | date:shortDate}}"></h2>
+                <h2 ng-style="myStyle" ng-bind-template="{{event.name | uppercase}} {{event.date | date:'shortDate'}}"></h2>
             </div>
             <div class="col-lg-4" ng-class="myClass">
                 <div><strong>Date:</strong> {{event.date | date}}</div>
@@ -30,10 +31,14 @@
 
             <div class="col-lg-4">
                 <div><strong>Address:</strong> {{event.location.address}}</div>
-                <div>{{event.location.city}}, {{event.location.state}}</div>
+                <div>{{event.location.city}}, {{event.location.province}}</div>
             </div>
         </div>
         <hr/>
+
+        <div class="row">{{ {a:3,b:'hi',c:{aa:35} } | json }}</div>
+        <div class="row">{{3.14145926535 | number:2}}</div>
+        <div class="row">{{34 | currency}}</div>
 
         <div class="row"><button class="btn btn-info" ng-disabled="buttonDisabled">{{buttonDisabled}}</button></div>
 
@@ -45,8 +50,21 @@
 
         <div class="row">
             <h3>Sessions</h3>
+            <div class="row">
+                <select class="input-sm" ng-model="sortorder">
+                    <option selected value="name">name</option>
+                    <option value="-upVoteCount">vote</option>
+                </select>
+
+                <select class="input-sm" ng-model="query.level">
+                    <option selected value="">All</option>
+                    <option value="Advanced">Advanced</option>
+                    <option value="Beginner">Beginner</option>
+                    <option value="Intermediate">Intermediate</option>
+                </select>
+            </div>
             <ul class="list-unstyled">
-                <li ng-repeat="session in event.sessions">
+                <li ng-repeat="session in event.sessions | orderBy:sortorder | limitTo:4 | filter:query">
                     <div class="col-lg-2 votingWidget">
                         <div class="btn btn-success votingButton" ng-click="voteUpSession(session)">
                             <span class="glyphicon glyphicon-chevron-up"></span>
@@ -60,7 +78,7 @@
                         <div class="well" ng-class-odd="myClass">
                             <h4 class="well-title">{{session.name}}</h4>
                             <h6>{{session.creatorName}}</h6>
-                            <span>Duration: {{session.duration}}</span>
+                            <span>Duration: {{session.duration | durations}}</span>
                             <span>Level: {{session.level}}</span>
                             <p>Abstract: {{session.abstract}}</p>
                         </div>
@@ -81,4 +99,5 @@
 <script src="bower_components/angular-route/angular-route.js"></script>
 <script src="js/app.js"></script>
 <script src="js/controllers/EventController.js"></script>
+<script src="js/filters.js"></script>
 </html>
