--- a/app/index.html
+++ b/app/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="css/app.css"/>
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css"/>
     <!--<link rel="stylesheet" href="css/cyborg_bs.min.css"/>-->
+    <script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=2"></' + 'script>')</script>
 </head>
 <body ng-cloak>
 <div class="container" ng-controller="MainMenuController">
@@ -14,6 +15,7 @@
             <ul class="nav">
                 <li><a href="#/eventdetails">Home</a></li>
                 <li><a href="#/newevent" ng-click="createEvent()">Create</a></li>
+                <li><a href="#/sampledirectives">Directives</a></li>
             </ul>
         </div>
     </div>
@@ -33,6 +35,8 @@
 <script src="js/controllers/MainMenuController.js"></script>
 <script src="js/controllers/EditEventController.js"></script>
 <script src="js/controllers/SessionController.js"></script>
+<script src="js/controllers/SampleDirectiveController.js"></script>
 <script src="js/services/eventData.js"></script>
+<script src="js/directives/directives.js"></script>
 <script src="js/filters.js"></script>
 </html>
