--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="css/app.css"/>
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css"/>
     <!--<link rel="stylesheet" href="css/cyborg_bs.min.css"/>-->
-    <script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=2"></' + 'script>')</script>
+    <!--<script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=2"></' + 'script>')</script>-->
 </head>
 <body ng-cloak>
 <div class="container" ng-controller="MainMenuController">
